# ros2-industrial-robot-simulation

./: README.md  Scara Assembly1arm_base_linkLink_4_5000_1.000000_1.000000.ikcache
src/IFRA_ConveyorBelt/conveyorbelt_gazebo/urdf/: chip.urdf  pcb.urdf
src/scara_moveit_config/config/: Scara Assembly1.srdf
src/scara_moveit_config/launch/: demo_with_controllers.launch.py
src/scara_robot_pkg/: package.xml  setup.py
src/scara_robot_pkg/launch/: pick_place_pipeline.launch.py  scara_conveyor_gazebo.launch.py
src/scara_robot_pkg/meshes/: Link_3.STL  Link_4.STL
src/scara_robot_pkg/scara_robot_pkg/: pick_place_cycle.py  scene_publisher.py
src/scara_robot_pkg/urdf/: scara_assembly.urdf  scara_gazebo.urdf.xacro
src/scara_robot_pkg/worlds/: two_conveyors.world
